--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -58,7 +58,7 @@
 
 		<com.google.android.material.card.MaterialCardView android:id="@+id/btnGenderFemale"
 			android:layout_width="0dp"
-			android:layout_height="@dimen/registration_button_step1_size"
+			android:layout_height="0dp"
 			android:layout_marginEnd="8dp"
 
 			android:alpha="0"
@@ -67,7 +67,8 @@
 			app:cardElevation="0dp"
 			app:cardBackgroundColor="@color/material_registration_buttons"
 			app:cardCornerRadius="8dp"
-
+			
+			app:layout_constraintHeight_percent="0.3"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toStartOf="@id/btnGenderMale"
 			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
@@ -86,20 +87,21 @@
 				android:textAppearance="?textAppearanceHeadline6"
 				/>
 
-			<androidx.appcompat.widget.AppCompatImageView
+			<ImageView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center|top"
 				android:layout_marginTop="16dp"
 
 				app:srcCompat="@drawable/ic_registration_female_64dp"
+				android:contentDescription="@null"
 				/>
 
 		</com.google.android.material.card.MaterialCardView>
 
 		<com.google.android.material.card.MaterialCardView android:id="@+id/btnGenderMale"
 			android:layout_width="0dp"
-			android:layout_height="@dimen/registration_button_step1_size"
+			android:layout_height="0dp"
 
 			android:alpha="0"
 			android:rotationY="90"
@@ -108,6 +110,7 @@
 			app:cardBackgroundColor="@color/material_registration_buttons"
 			app:cardCornerRadius="8dp"
 
+			app:layout_constraintHeight_percent="0.3"
 			app:layout_constraintStart_toEndOf="@id/btnGenderFemale"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
@@ -125,13 +128,14 @@
 				android:textAppearance="?textAppearanceHeadline6"
 				/>
 
-			<androidx.appcompat.widget.AppCompatImageView
+			<ImageView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center|top"
 				android:layout_marginTop="16dp"
 
 				app:srcCompat="@drawable/ic_registration_male_64dp"
+				android:contentDescription="@null"
 				/>
 
 		</com.google.android.material.card.MaterialCardView>
