--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -103,6 +103,7 @@
 					android:layout_width="36dp"
 					android:layout_height="36dp"
 					android:layout_margin="4dp"
+					android:scaleType="centerCrop"
 
 					app:bindImageUrl="@{viewModel.partnerPhoto}"
 
