seems that unemitted location was handled properly

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -22,4 +22,11 @@
 	android:layout_width="match_parent"
 	android:background="?colorSurface"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	/>
+	>
+	<com.mmdev.roove.ui.common.custom.components.LoadingView
+		android:layout_width="100dp"
+		android:layout_height="100dp"
+		android:layout_gravity="center"
+		/>
+	
+</FrameLayout>
